--- a/sass/modules/info-card/_info-card-two.scss
+++ b/sass/modules/info-card/_info-card-two.scss
@@ -14,6 +14,9 @@
       @include rmaxwd(1199) {
         height: 100%;
       }
+      @include sm {
+        height: auto;
+      }
       img {
         @include rmaxwd(1199) {
           height: 100%;
