--- a/sass/modules/about-image-card/_about-image-card-three.scss
+++ b/sass/modules/about-image-card/_about-image-card-three.scss
@@ -14,8 +14,8 @@
         }
         .shape {
           position: absolute;
-          bottom: 0;
-          right: 0;
+          bottom: -1px;
+          right: -1px;
           width: 68px;
           height: 237px;
         }
