--- a/sass/modules/about-image-card/_about-image-card-two.scss
+++ b/sass/modules/about-image-card/_about-image-card-two.scss
@@ -9,8 +9,8 @@
         }
         .shape {
           position: absolute;
-          bottom: 0;
-          right: 0;
+          bottom: -1px;
+          right: -1px;
           width: 97px;
           height: 327px;
           @include sm {
