--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -898,9 +898,108 @@
     }
     @include sm {
       margin-top: -10px;
+      height: auto;
     }
     .slick-list {
       overflow: visible;
+    }
+    .slick-dots {
+      display: flex;
+      gap: 30px;
+      flex-direction: column;
+      position: absolute;
+      top: 50%;
+      right: 14%;
+      transform: translateY(-50%);
+      z-index: 2;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+      @include rmaxwd(1800) {
+        right: 5%;
+      }
+
+      // @include rmaxwd(1199) {
+      //   position: relative;
+      //   flex-direction: row;
+      //   align-items: center;
+      //   justify-content: center;
+      //   bottom: 100px;
+      //   top: unset;
+      //   left: unset;
+      //   right: unset;
+      //   transform: none;
+      //   padding: 0;
+      // }
+
+      @include rmaxwd(991) {
+        gap: 20px;
+        bottom: 0;
+      }
+
+      @include rmaxwd(767) {
+        gap: 15px;
+        margin-top: 0;
+        transform: translateY(25%);
+      }
+      @include sm {
+        margin-top: 30px;
+      }
+
+      @include rmaxwd(575) {
+        gap: 10px;
+        bottom: 40px;
+        flex-direction: row;
+        position: static;
+        left: 0;
+        right: 0;
+        justify-content: center;
+      }
+      @include md {
+        flex-direction: column;
+      }
+
+      li {
+        display: flex;
+        line-height: 0;
+        outline: 1px solid transparent;
+        border: 4px solid transparent;
+        border-radius: 50px;
+        @include transition;
+
+        button {
+          font-size: 0;
+          padding: 0;
+          width: 10px;
+          height: 10px;
+          background-color: $gray;
+          border-radius: 50px;
+          position: relative;
+          flex-shrink: 0;
+          @include transition;
+
+          &:hover {
+            background-color: $white;
+            @include transition;
+          }
+        }
+
+        &.slick-active {
+          @include transition;
+          outline: 2px solid $white;
+
+          button {
+            width: 10px;
+            height: 10px;
+
+            &:before {
+              display: none;
+            }
+
+            @include transition;
+          }
+        }
+      }
     }
     .testimonial-arrow-btn {
       position: absolute;
