--- a/sass/modules/blog-card/_blog-card.scss
+++ b/sass/modules/blog-card/_blog-card.scss
@@ -52,6 +52,9 @@
       @include xl {
         padding: 30px;
       }
+      @include sm {
+        padding-bottom: 11px;
+      }
       .title {
         @include lg {
           font-size: 20px;
