--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -269,13 +269,16 @@
     position: relative;
     p {
       color: $white;
-      margin-bottom: 40px;
       font-family: $body-font;
       font-size: 16px;
       font-weight: 400;
       line-height: 30px;
+      margin-bottom: 40px;
       @include rwd(1400) {
         padding-right: 40px;
+      }
+      @include sm {
+        margin-bottom: 20px;
       }
     }
 
@@ -284,6 +287,9 @@
       width: 198px;
       height: 69px;
       margin-bottom: 40px;
+      @include sm {
+        margin-bottom: 20px;
+      }
 
       a {
         img {
