--- a/css/style.css
+++ b/css/style.css
@@ -81830,7 +81830,7 @@ body.admin-bar .header-area.style-7 {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .slider-area.style-2 .slider-wrapper-two .single-slider .slider-content-wrapper .slider-content .slider-title {
-    font-size: 48px;
+    font-size: 44px;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
@@ -90707,6 +90707,11 @@ ul.children {
 .room_and_suites .banner-text {
   margin-top: -40px;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .room_and_suites .banner-text {
+    margin-top: -25px;
+  }
+}
 .room_and_suites .room-card-slider-container {
   position: relative;
   margin-top: 24px;
@@ -91451,7 +91456,7 @@ ul.children {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .room_and_suites.style-2 .banner-text {
-    transform: translate(10%, 0);
+    transform: translate(6%, 0);
   }
 }
 .room_and_suites.style-2 .banner-text p {
@@ -91535,7 +91540,7 @@ ul.children {
   right: 50px;
   top: 80px;
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
+@media (max-width: 991px) {
   .service-area.style-2 .shape {
     display: none;
   }
@@ -91823,6 +91828,12 @@ ul.children {
   justify-content: center;
   cursor: pointer;
   transition: background-color 0.3s ease;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .project-area.style-1 .project-slider .project-arrow-btn {
+    width: 54px;
+    height: 54px;
+  }
 }
 .project-area.style-1 .project-slider .project-arrow-btn i {
   color: #ffffff;
@@ -94399,9 +94410,9 @@ ul.children {
   grid-gap: 12px;
   width: 240px;
 }
-@media only screen and (min-width: 992px) and (max-width: 1280px) {
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
   .footer .widget-instagram-feed {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (max-width: 767px) {
@@ -94863,6 +94874,11 @@ ul.children {
   font-style: normal;
   font-weight: 400;
   line-height: 40px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .room-card .content-wrapper .inner-wrapper .title {
+    font-size: 28px;
+  }
 }
 .room-card .content-wrapper .inner-wrapper .price-wrapper {
   display: flex;
