--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -143,7 +143,7 @@
         transform: translate(50px, 0);
       }
       @include sm {
-        transform: translate(10%, 0);
+        transform: translate(6%, 0);
       }
       p {
         transform: none;
@@ -223,7 +223,7 @@
       position: absolute;
       right: 50px;
       top: 80px;
-      @include sm {
+      @include rmaxwd(991) {
         display: none;
       }
     }
@@ -517,6 +517,10 @@
         justify-content: center;
         cursor: pointer;
         transition: background-color 0.3s ease;
+        @include sm {
+          width: 54px;
+          height: 54px;
+        }
         i {
           color: $white;
           font-size: 28px;
