--- a/sass/modules/checknow/_checknow.scss
+++ b/sass/modules/checknow/_checknow.scss
@@ -1,3 +1,17 @@
+input[type='date']::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  pointer-events: none;
+}
+
+/* Firefox */
+input[type='date'] {
+  -moz-appearance: textfield;
+}
+
+/* Internet Explorer */
+input[type='date']::-ms-clear {
+  display: none;
+}
 .checknow-form {
   .inner-wrapper {
     padding: 20px;
@@ -97,9 +111,16 @@
         display: none;
         -webkit-appearance: none;
       }
+      input[type='date']::-webkit-calendar-picker-indicator {
+        display: none;
+        -webkit-appearance: none;
+      }
 
       input[type='date']::-moz-calendar-picker-indicator {
         display: none;
+      }
+      input[type='date'] {
+        -moz-appearance: textfield;
       }
 
       input[type='date']::-ms-clear {
